--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </a>
         <ul>
           <li><a href="#traditions-section">Наші традиції</a></li>
-          <li><a href="#chfs-section">Шеф-кухарі</a></li>
+          <li><a href="#chefs-section">Шеф-кухарі</a></li>
           <li><a href="#formats-section">Формати</a></li>
           <li><a href="#contact-section">Контакти</a></li>
         </ul>
